Fixed spacing between Projects to be responsive rather than using hard-coded width

--- a/src/Containers/Main.css
+++ b/src/Containers/Main.css
@@ -1,7 +1,9 @@
 html {
 	scroll-behavior: smooth;
 }
-
+.main-wrapper {
+	width: 100%;
+}
 @media screen and (prefers-reduced-motion: reduce) {
 	html {
 		scroll-behavior: auto;
